[package]
name = "wireguard-rs-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = "0.7.10"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version  = "1.0.159", features = ["derive"]}
async-nats = "0.33.0"
anyhow = { version = "1.0.71", features = ["backtrace"]}
rand = "0.8.5"
futures = "0.3.28"
serde_json = "1.0.33"
bytes = "1.5.0"
defguard_wireguard_rs = "0.4.2"
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }
hex = "0.4.3"
local-ip-address = "0.6.1"